update booking route, add user update route, update swagger
